# CarnetGTK

./: README.md  meson.build  org.gnome.Carnetgtk.json  org.gnome.Carnetgtk.json~  python3-webdavclient.json  python3-webdavclient3.json
data/: meson.build  org.gnome.Carnetgtk.appdata.xml.in  org.gnome.Carnetgtk.desktop.in  org.gnome.Carnetgtk.gschema.xml
po/: POTFILES  meson.build
src/: carnetgtk.gresource.xml  carnetgtk.in  main.py  meson.build  note_widget.py  note_widget.ui  window.py  window.ui
src/server/: server.py  settings_manager.py  webdav_sync.py  webdav_sync_algo.py
src/server/databases/: keyword_db_manager.py  recent_db_manager.py  sync_db.py  webdav_sync.py
src/server/notes/: note_manager.py  note_metadata.py
src/ui/: adaptive_grid.py  browser_note_list.py  editor_toolbar.py  note_list.py  overview.py  overview_toolbar.py  recent_note_list.py
src/ui/res/: editor_toolbar.ui  overview.ui  overview_toolbar.ui  window.ui
